# ludLLM

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: architecture.md  novel-pipeline-primer.md
docs/features/: story-graph-viz.md
plugins/ludllm/: README.md
plugins/ludllm/.claude-plugin/: plugin.json
runs/alpha/: book_state.json  params.toml
runs/alpha-v2/: book_state.json  params.toml
runs/alpha-v2/00_brief/: brief.md
runs/alpha-v2/01_world/: ledger.md  world.md
runs/alpha-v2/02_cast/: cast.md
runs/alpha-v2/03_structure/: structure.md
runs/alpha-v2/04_outline/: outline.md  timeline.md
runs/alpha-v2/04b_dossiers/: dossiers.md
runs/alpha-v2/05_manuscript/: chapter_001.md  chapter_002.md  chapter_003.md  chapter_004.md  chapter_005.md  chapter_006.md  chapter_007.md  chapter_008.md  chapter_009.md  chapter_010.md  chapter_011.md  chapter_012.md  chapter_013.md  chapter_014.md  chapter_015.md  chapter_016.md  chapter_017.md  chapter_018.md  chapter_019.md  chapter_020.md  chapter_021.md  chapter_022.md  chapter_023.md  chapter_024.md  chapter_025.md  chapter_026.md  chapter_027.md  chapter_028.md  chapter_029.md  chapter_030.md  (+7 more)
scripts/: setup_real.py  smoke_real.py
src/ludllm/: __init__.py  cli.py  params.py  prompts.py
tests/: conftest.py  test_authoring.py  test_chapter_loop.py  test_cli.py  test_critique.py  test_dossier.py  test_generators.py  test_params.py  test_pipeline_e2e.py  test_providers.py  test_state.py  test_temporal.py  test_viz.py  test_viz_studio.py
tests/fixtures/: tiny_state.py
(+86 files in other folders)
