[project]
name = "ludllm"
version = "0.1.0"
description = "Agentic pipeline for generating a full-length, coherent novel end to end"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Real model providers are opt-in: the core runs fully on mock models with no
# keys, so `pip install ludllm` stays lean. Install ludllm[models] for live runs.
models = [
    "anthropic>=0.40",
    "google-genai>=0.3",
    "openai>=1.50",
    # The dossier stage composes portraits into the file artifacts; the `ludllm
    # stage dossier` CLI path needs PIL in the venv (not just `uv run --with pillow`).
    "pillow>=10.0",
    # `ludllm viz` rasterizes each dossier PDF page to an image for the paginated
    # dossier viewer. Bundled here so the standard `--extra models` install covers
    # viz too; without it, viz degrades (spread-split or no pagination).
    "pymupdf>=1.24",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.scripts]
ludllm = "ludllm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ludllm"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Personal prompt-review scratch files (untracked, gitignored). Not real modules.
extend-exclude = ["src/ludllm/prompts_review.py", "src/ludllm/prompts copy.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
